--- a/app/src/main/res/drawable/edit_text_border.xml
+++ b/app/src/main/res/drawable/edit_text_border.xml
@@ -5,5 +5,5 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/black" />
+        android:color="?colorOnSecondary" />
 </shape>
