--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/change_currency_fragment"
-        android:name="com.abdelrahman.raafaat.currency.ChangeCurrencyFragment"
+        android:name="com.abdelrahman.raafaat.currency.ui.ChangeCurrencyFragment"
         android:label="Change Currency Fragment"
         tools:layout="@layout/fragment_change_currency" />
 
